devops-kubernetes-resources-references/kubernetes-istio-scripts/kubernetes/east-west-basic/devops-east-west-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: east-west-deployment-blue
  labels:
    app.kubernetes.io/name: east-west-blue
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: east-west-blue
  template:
    metadata:
      labels:
        app.kubernetes.io/name: east-west-blue
        app.kubernetes.io/version: 2.0.0
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:2.0.0
        resources:
          limits:
            cpu: "0.3"
            memory: 250M
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: east-west-deployment-yellow
  labels:
    app.kubernetes.io/name: east-west-yellow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: east-west-yellow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: east-west-yellow
        app.kubernetes.io/version: 2.0.0
    spec:
      containers:
      - name: devops-yellow
        image: timpamungkas/devops-yellow:2.0.0
        resources:
          limits:
            cpu: "0.3"
            memory: 250M
        ports:
        - name:  http
          containerPort: 8112
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/readiness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/liveness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: east-west-deployment-white
  labels:
    app.kubernetes.io/name: east-west-white
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: east-west-white
  template:
    metadata:
      labels:
        app.kubernetes.io/name: east-west-white
        app.kubernetes.io/version: 2.0.0
    spec:
      containers:
      - name: devops-white
        image: timpamungkas/devops-white:2.0.0
        resources:
          limits:
            cpu: "0.3"
            memory: 250M
        ports:
        - name:  http
          containerPort: 8113
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/white/actuator/health/readiness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/white/actuator/health/liveness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app.kubernetes.io/name: east-west-blue
spec:
  selector:
    app.kubernetes.io/name: east-west-blue
  ports:
  - port: 8111
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-yellow-clusterip
  labels:
    app.kubernetes.io/name: east-west-yellow
spec:
  selector:
    app.kubernetes.io/name: east-west-yellow
  ports:
  - port: 8112
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-white-clusterip
  labels:
    app.kubernetes.io/name: east-west-white
spec:
  selector:
    app.kubernetes.io/name: east-west-white
  ports:
  - port: 8113
    name: http
